Add Code Modules CRUD
