# server/src/main/resources/openapi/meta-storage-1.0.yaml
@@ -157,6 +157,106 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  # Modules
+  /meta-storage/config/modules:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+    post:
+      description: Create a new code module
+      operationId: postCodeModule
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/codeModule.json
+      responses:
+        "201":
+          description: code module created
+          content:
+            application/json:
+              schema:
+                $ref: schemas/codeModule.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    get:
+      description: Retrieve all code modules
+      operationId: getCodeModules
+      parameters:
+        - $ref: parameters/count.yaml
+        - $ref: parameters/limit.yaml
+        - $ref: parameters/query.yaml
+        - $ref: parameters/offset.yaml
+      responses:
+        "200":
+          description: list of code modules
+          content:
+            application/json:
+              schema:
+                $ref: schemas/codeModules.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /meta-storage/config/modules/{id}:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: code module identifier
+        schema:
+          type: string
+    get:
+      description: Retrieve a code module by id
+      operationId: getCodeModule
+      responses:
+        "200":
+          description: code module returned
+          content:
+            application/json:
+              schema:
+                $ref: schemas/codeModule.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    put:
+      description: Update code module by id
+      operationId: putCodeModule
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/codeModule.json
+      responses:
+        "204":
+          description: code module updated
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    delete:
+      description: Delete code module by id
+      operationId: deleteCodeModule
+      responses:
+        "204":
+          description: code module deleted
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   # Sources
   /meta-storage/sources:
     parameters:
